--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,35 @@
-# History files
-.Rhistory
-.Rapp.history
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Session Data files
-.RData
 
-# User-specific files
-.Ruserdata
+# Compiled binary addons (http://nodejs.org/api/addons.html)
+build/Release
 
-# Example code in package build process
-*-Ex.R
+# Dependency directories
+node_modules/
+jspm_packages/
 
-# Output files from R CMD build
-/*.tar.gz
+# Distribution directories
+dist/
 
-# Output files from R CMD check
-/*.Rcheck/
+# Typescript v1 declaration files
+typings/
 
-# RStudio files
-.Rproj.user/
+# Optional npm cache directory
+.npm
 
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
+# Optional eslint cache
+.eslintcache
 
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
+# Optional REPL history
+.node_repl_history
 
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
+# Output of 'npm pack'
+*.tgz
 
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-# R Environment Variables
-.Renviron
+# Yarn Integrity file
+.yarn-integrity
