--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pm2": "^5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
