--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
+    "pdfkit": "^0.13.0",
     "pm2": "^5.2.2"
   },
   "scripts": {
