--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,11 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.1",
     "pdfkit": "^0.13.0",
-    "pm2": "^5.2.2"
+    "pdfkit-table": "^0.1.99",
+    "pm2": "^5.2.2",
+    "voilab-pdf-table": "^0.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
