--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,12 @@
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
+    "mysqldump": "^3.2.0",
     "nodemailer": "^6.9.1",
     "pdfkit": "^0.13.0",
     "pdfkit-table": "^0.1.99",
